results/SpecGenBench/0-shot/log-PassPillow-2023_11_28_23_51_05.txt
class PassPillow {
    //@ requires n > 0;
    //@ requires time >= 0;
    //@ ensures \result >= 0 && \result <= n;
    public int passPillow(int n, int time) {
        //@ assert (n - 1) * 2 > 0;
        time %= (n - 1) * 2;
        //@ assert time >= 0 && time < (n - 1) * 2;
        return time < n ? time + 1 : n * 2 - time - 1;
        //@ assert \result >= 0 && \result <= n;
    }
}
/home/max/Documents/JMLGPT/tmp/PassPillow.java:10: error: A \result expression may not be in a assert clause
        //@ assert \result >= 0 && \result <= n;
                    ^
/home/max/Documents/JMLGPT/tmp/PassPillow.java:10: error: A \result expression may not be in a assert clause
        //@ assert \result >= 0 && \result <= n;
                                    ^
2 errors

